samples/_failures_safe/1761227051_eb56d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0fdcba9a.c: In function ‘tokenize’:
./samples/SAFE/__tmp_0fdcba9a.c:165:45: error: expected ‘)’ at end of input
  165 |     while (input[pos] != '\0' && token_count
      |           ~                                 ^
      |                                             )
./samples/SAFE/__tmp_0fdcba9a.c:165:5: error: expected declaration or statement at end of input
  165 |     while (input[pos] != '\0' && token_count
      |     ^~~~~
